[project]
name = "quantum-seismic"
version = "0.1.0"
description = "Seismic impact detection using MacBook sensors — turns your laptop into a desk seismograph"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Symbients" }]
keywords = ["seismology", "signal-processing", "accelerometer", "vibration", "detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "sounddevice>=0.4",
    "textual>=0.70",
    "rich>=13.0",
]

[project.scripts]
quantum-seismic = "quantum_seismic.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quantum_seismic"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
