[project]
name = "quantum-seismic"
version = "0.2.0"
description = "Ambient environmental sensing for AI agents — turns MacBook sensors into structured context"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Symbients" }]
keywords = [
    "sensors",
    "ambient-intelligence",
    "agent-context",
    "accelerometer",
    "environmental-awareness",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "sounddevice>=0.4",
]

[project.optional-dependencies]
accel = ["macimu>=0.2"]
location = ["pyobjc-framework-CoreLocation>=10.0"]
webcam = ["anthropic>=0.40"]
agent = ["claude-agent-sdk>=0.1"]
all = [
    "macimu>=0.2",
    "pyobjc-framework-CoreLocation>=10.0",
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1",
]

[project.scripts]
quantum-seismic = "quantum_seismic.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quantum_seismic"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
